--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@babel/core": "7.14.8",
     "@babel/preset-react": "7.14.5",
     "babel-loader": "8.2.2",
-    "html-webpack-plugin": "5.3.2",
+    "bundle-loader": "^0.5.6",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "html-webpack-plugin": "5.3.2",
+    "husky": "^7.0.2",
     "serve": "11.3.2",
+    "typescript": "^4.4.2",
     "webpack": "5.47.1",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2"
@@ -18,10 +21,19 @@
     "start": "webpack-cli serve",
     "build": "webpack --mode production && gulp",
     "serve": "serve dist -p 3001",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "husky install"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.15.0",
+    "@react-native-community/eslint-config": "^3.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
